--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
-Stefan Holdermans <stefan@cs.uu.nl>
+Jurriën Stutterheim <j.stutterheim@me.com>
+Ruben de Gooijer <rubendegooijer@gmail.com>
 Paul van der Walt <paul@denknerd.nl>
