some things for the report, such as semantic package

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1,5 +1,7 @@
 \documentclass[a4paper]{article}
 
+\usepackage{semantic}
+
 \author{Jurri\"en Stutterheim\and Ruben de Gooijer \and Paul van der Walt} 
 \date{\today} 
 \title{Implementation notes for Type and Effect Systems}
