--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper]{article}
 
 \usepackage{semantic}
+\usepackage{dsfont}
 
 \author{Jurri\"en Stutterheim\and Ruben de Gooijer \and Paul van der Walt} 
 \date{\today} 
@@ -12,18 +13,54 @@
 
 \section{Introduction}
 
-
-\section{Approach}
-
+This project aims to implement a tool which can do a control-flow analysis on a lambda-calculus language with support for
+data structures. 
+%todo: more. 
 
 \section{Design}
 
+\subsection{A simple functional language}
+
+%todo: copied from slides, may need adjustment.
+
+\begin{table}
+    \centering
+    \begin{tabular}{rcll}
+        $n$ &           $\in$ & \textbf{Num = $\mathds{N}$}& numerals \\
+        $f,x$ &         $\in$ & \textbf{Var}               & variables \\
+        $\oplus$ &      $\in$ & \textbf{Op}                & binary operators \\
+        $\pi$ &         $\in$ & \textbf{Pnt}               & program points  \\
+        $t$ &           $\in$ & \textbf{Tm}                & terms \\
+    \end{tabular}
+    \caption{Basic elements}
+    \label{tab:elems}
+\end{table}
+
+\begin{table}
+    \centering
+    \begin{tabular}{lcl}
+        $t$ & ::= & $n\: |\: \textbf{ false }\: |\: \textbf{ true }\: |\: x\: |\: \lambda_\pi x.t_1\: |\: \mu f.\lambda_\pi x . t_1$ \\
+            & $|$ & $t_1 t_2 \:|\: \textbf{ if } t_1 \textbf{ then } t_2 \textbf{ else } t_3 \:|\: \textbf{ let } x = t_1 \textbf{ in } t_2$\\
+            & $|$ & $t_1 \oplus t_2 \:|\: [\,]\:|\:t_1:t_2 $\\
+          
+    \end{tabular}
+    \caption{Grammar}
+    \label{tab:grammar}
+\end{table}
+
+
+
+\subsection{Natural semantics}
+
+
+\section{Approach}
 
 
 \section{Implemented}
 
 \section{Example programs}
 
+%todo: this probably needs fixing. 
 \begin{itemize}
     \item \texttt{app.hm} An illustration of the function application in action. 
     \item \texttt{assignment.hm} The example program from the assignment, with
