geez, finally fixed semantic.sty problem...

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -91,7 +91,7 @@ We have the usual set of rules including, for example,  \emph{cfa-var} or \emph{
 
 
 \inference[cfa-nil]{}
-{\widehat{\Gamma} |-_{CFA} [\,] : [\widehat{\tau}]}
+{\widehat{\Gamma} |-_{CFA} [\,] : [\widehat{\sigma}]}
 
 \inference[cfa-cons]{\widehat{\Gamma} |-_{CFA} t_1:\widehat{\sigma} 
 & \widehat{\Gamma}|-_{CFA} t_2 : [\widehat{\sigma}]}
