--- a/doc/main.tex
+++ b/doc/main.tex
@@ -46,9 +46,9 @@ data structures. The focus is on lists and pairs, for now.
     \begin{tabular}{lcl}
         $t$ & ::= & $n\: |\: \textbf{ false }\: |\: \textbf{ true }\: |\: x\: |\: \lambda_\pi x.t_1\: |\: \mu f.\lambda_\pi x . t_1$ \\
             & $|$ & $t_1 t_2 \:|\: \textbf{ if } t_1 \textbf{ then } t_2 \textbf{ else } t_3 \:|\: \textbf{ let } x = t_1 \textbf{ in } t_2$\\
-            & $|$ & $t_1 \oplus t_2 \:|\: [\,]_\pi \:|\:t_1:_\pi t_2 \: | \: (t_1,t_2)_\pi $ \\ 
-            & $|$ & $ (\texttt{ case } e_0 \texttt{ of Pair}(x_1,x_2) \Rightarrow e_1)     $ \\
-            & $|$ & $ (\texttt{ case } e_0 \texttt{ of Cons}(x_1,x_2) \Rightarrow e_1 \texttt{ or } e_2)     $ \\
+            & $|$ & $t_1 \oplus t_2 \:|\: [\,]_\pi \:|\:t_1\<:>_\pi t_2 \: | \: (t_1,t_2)_\pi $ \\ 
+            & $|$ & $ (\texttt{case } e_0 \texttt{ of }(x_1,x_2) \Rightarrow e_1)     $ \\
+            & $|$ & $ (\texttt{case } e_0 \texttt{ of }(x_1\<:>x_2) \Rightarrow e_1 \texttt{ or } e_2)     $ \\
     \end{tabular}
     \caption{Grammar}
     \label{tab:grammar}
@@ -103,9 +103,16 @@ $[$\emph{cfa-nil}$] $&
 $[$\emph{cfa-cons}$] $& \inference{\widehat{\Gamma} |-_{CFA} t_1:\widehat{\sigma} 
  \widehat{\Gamma}|-_{CFA} t_2 : [\widehat{\sigma}]}
 {\widehat{\Gamma} |-_{CFA} t_1 \<:> t_2 :  [\widehat{\sigma}]} \\
-$[$\emph{cfa-case}$] $& \inference{\widehat{\Gamma} |-_{CFA} t_1:\widehat{\sigma} 
- \widehat{\Gamma}|-_{CFA} t_2 : [\widehat{\sigma}]}
-{\widehat{\Gamma} |-_{CFA} t_1 \<:> t_2 :  [\widehat{\sigma}]} \\
+~&~\\
+$[$\emph{cfa-pair}$] $& \inference{\widehat{\Gamma} |-_{CFA} t_1 : \widehat{\tau}_1 &  \widehat{\Gamma} |-_{CFA} t_2 : \widehat{\tau}_2   } 
+{\widehat{\Gamma} |-_{CFA} (t_1,t_2) : \widehat{\tau}_1 \times^\varphi \widehat{\tau}_2 } \\
+~&~\\
+$[$\emph{cfa-case-pair}$] $& \inference{\widehat{\Gamma} |-_{CFA} e_0 : \widehat{\tau}_1 \times^\varphi \widehat{\tau}_2 
+&  \widehat{\Gamma} |-_{CFA} e_1 : \widehat{\tau}   } 
+{\widehat{\Gamma} |-_{CFA} \texttt{case } e_1 \texttt{ of }(x_1,x_2) \Rightarrow e_1 : \widehat{\tau} } \\
+
+%todo still: cfa-case-list.  also, natural semantics for cases. 
+
     \end{tabular}
     \caption{Control flow analysis rules. }
     \label{tab:cfa-rules}
