--- a/doc/main.tex
+++ b/doc/main.tex
@@ -6,6 +6,7 @@
 % things for the semantic package
 \reservestyle{\command}{\textbf}
 \command{let,in,:,case,of}
+\mathlig{-->}{\longrightarrow}
 % end semantic
 
 \author{Jurri\"en Stutterheim\and Ruben de Gooijer \and Paul van der Walt} 
@@ -80,12 +81,34 @@ data structures. The focus is on lists and pairs, for now.
     \label{tab:typing}
 \end{table}
 
-This is the control-flow analysis: 
-\fbox{$\widehat{\Gamma}\:\vdash_{CFA} t : \widehat{\sigma}$}
-
 \subsection{Natural semantics}
 
-We have the usual set of rules including, for example,  \emph{cfa-var} or \emph{cfa-let}, which has been extended to support lists, see \emph{cfa-nil} and \emph{cfa-cons}, the rules specifying list-typing. 
+In this section, Table \ref{tab:natural-semantics}, we define how terms are
+evaluated. This is also known as big-step semantics. Notice the addition of
+\textbf{case}-statements for data structure use. See Table 5.4 in \cite{nnh}
+for reference. 
+
+\begin{table}
+    \centering
+    \begin{tabular}{ll}
+        $ [$\emph{ns-con}$] $& \inference{}
+{ |- c --> c} \\ ~&~\\
+
+    \end{tabular}
+    \caption{Natural semantics for the language}
+    \label{tab:natural-semantics}
+\end{table}
+
+\subsection{Control Flow Analysis}
+
+We have the usual set of rules including, for example,  \emph{cfa-var} or
+\emph{cfa-let}, which has been extended to support lists, see \emph{cfa-nil}
+and \emph{cfa-cons}, the rules specifying list-typing, Table
+\ref{tab:cfa-rules}. CFA judgements look like {$\widehat{\Gamma}\:\vdash_{CFA}
+t : \widehat{\sigma}$}, meaning that some term $t$ has inferred type
+$\widehat{\sigma}$ in context $\widehat{\Gamma}$. See Table 5.2 in \cite{nnh}
+for reference. 
+
 
 \begin{table}
     \centering
@@ -145,5 +168,18 @@ $[$\emph{cfa-case-cons}$] $& \inference{\widehat{\Gamma} |-_{CFA} e_0 : [\wideha
     \item \textit{singleton.hm} Simply illustrates a variable which is out of
         scope. 
 \end{itemize}
+
+
+
+\begin{thebibliography}{9}
+
+\bibitem{nnh}
+  {Flemming Nielson, Hanne Riis Nielson, Chris Hankin},
+  \emph{Principles of Program Analysis},
+  Springer, Berlin,
+  2nd Edition,
+  2005.
+
+\end{thebibliography}
 
 \end{document}
