--- a/doc/main.tex
+++ b/doc/main.tex
@@ -3,6 +3,7 @@
 \usepackage{semantic}
 \usepackage{dsfont}
 \usepackage{array}
+\usepackage{apa}
 
 % things for the semantic package
 \reservestyle{\command}{\textbf}
