list syntax slightly changed

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -205,7 +205,7 @@ rule, for lists, was added to the default implementation.
     \centering
     \begin{tabular}{rcb{7cm}}
         \hline
-        $\mathcal{W}_{CFA}(\widehat{\Gamma},[])$ & = & $(\tau\: \texttt{list}^{\alpha}, id, \emptyset)$ with $\tau,\alpha$ fresh \\
+        $\mathcal{W}_{CFA}(\widehat{\Gamma},[])$ & = & $([\tau]^{\alpha}, id, \emptyset)$ with $\tau,\alpha$ fresh \\
         $\mathcal{W}_{CFA}(\widehat{\Gamma},(x\<:>xs))$ & = &  $ 
 \begin{array}{lll}
     let & \beta & \textnormal{fresh annotation variable}\\
