start of typing judgements, to be continued

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -119,6 +119,50 @@ the type system.
     \label{tab:typing}
 \end{table}
 
+Next a list of typing judgements will be given. This constitutes the final type
+system. %See weijers fig 5.3 for a reference. 
+
+These rules are formulated in a syntax-directed fashion. 
+
+\begin{table}
+    \centering
+    \begin{tabular}{ll}
+%TODO FIXME 
+        \hline
+        $ [$\emph{t-var}$] $& \inference{\widehat{\Gamma}(x) = \widehat{\sigma}}
+{\widehat{\Gamma} |-_{CFA} x  : \widehat{\sigma}} \\
+~&~\\
+$[$\emph{t-let}$] $& \inference{\widehat{\Gamma} |-_{CFA} t_1:\widehat{\sigma}_1 
+& \widehat{\Gamma}[x \mapsto \widehat{\sigma}_1] |-_{CFA} t_2 : \widehat{\tau}}
+{\widehat{\Gamma} |-_{CFA}\: \<let>\: x = t_1\: \<in>\: t_2 : \widehat{\tau}} \\
+~&~\\
+$[$\emph{t-nil}$] $& 
+\inference{}
+{\widehat{\Gamma} |-_{CFA} [\,] : [\widehat{\sigma}]} \\
+~&~\\
+$[$\emph{t-cons}$] $& \inference{\widehat{\Gamma} |-_{CFA} t_1:\widehat{\sigma} 
+ \widehat{\Gamma}|-_{CFA} t_2 : [\widehat{\sigma}]}
+{\widehat{\Gamma} |-_{CFA} t_1 \<:> t_2 :  [\widehat{\sigma}]} \\
+~&~\\
+$[$\emph{t-pair}$] $& \inference{\widehat{\Gamma} |-_{CFA} t_1 : \widehat{\tau}_1 &  \widehat{\Gamma} |-_{CFA} t_2 : \widehat{\tau}_2   } 
+{\widehat{\Gamma} |-_{CFA} (t_1,t_2) : \widehat{\tau}_1 \times^\varphi \widehat{\tau}_2 } \\
+~&~\\
+$[$\emph{t-case-pair}$] $& \inference{\widehat{\Gamma} |-_{CFA} e_0 : \widehat{\tau}_1 \times^\varphi \widehat{\tau}_2 
+&  \widehat{\Gamma} |-_{CFA} e_1 : \widehat{\tau}   } 
+{\widehat{\Gamma} |-_{CFA} \:\<case>\: e_0\: \<of>\: (x_1,x_2) \Rightarrow e_1 : \widehat{\tau} } \\
+~&~\\
+$[$\emph{t-case-nil}$] $& \inference{\widehat{\Gamma} |-_{CFA} e_0 : [\widehat{\tau}_1] &  \widehat{\Gamma} |-_{CFA} e_1 : \widehat{\tau}   } 
+{\widehat{\Gamma} |-_{CFA} \:\<case>\: e_0\: \<of>\: [] \Rightarrow e_1 : \widehat{\tau} }, if $e_0$ empty\\
+~&~\\
+$[$\emph{t-case-cons}$] $& \inference{\widehat{\Gamma} |-_{CFA} e_0 : [\widehat{\tau}_1] &  \widehat{\Gamma} |-_{CFA} e_1 : \widehat{\tau}   } 
+{\widehat{\Gamma} |-_{CFA} \:\<case>\: e_0\: \<of>\: (x\<:>xs) \Rightarrow e_1 : \widehat{\tau} }, if $e_0$ nonempty\\
+%TODO FIXME 
+        \hline
+    \end{tabular}
+    \caption{Typing judgements}
+    \label{tab:typing-rules}
+\end{table}
+
 \subsection{Natural semantics}
 
 In this section, Table \ref{tab:natural-semantics}, we define how terms are
